# misc

./: .gitignore
ARToolkit64bit/: README.txt
arrayfire/: .gitignore  Makefile  README  getDeviceInfo.cpp  matmul.cpp  matrixComparison.cpp
backpropagation/: Makefile  backpropagation.c  nnsys.c  nnsys.h
c++17/: template.cpp  test.cpp
chainer/: .gitignore  sin.py  sin_hikobotch.py  test.py
clm_system/: Makefile  clm_sys.c  clm_sys.h  clm_usr.c  clm_usr.h  clm_usr_utils.c  clm_usr_utils.h  clmsys  io.c  io.h  main.c  params.h
cmake/full_executable/: CMakeLists.txt  foo.cpp  foo.cxx  foo.h  tutorial.cxx
cmake/shared_library/: CMakeLists.txt  foo.h  una.cpp  una.h
cppunit/: Makefile  README  compile.sh  sample.h  test-class.cc
cpractice/: binary_mean_opt.cpp  binary_search.cpp  binary_search_double.cpp  eucledean.cpp  exeucledean.cpp  forall.cpp  forall_one.cpp  set.cpp  thereexists.cpp  thereexists_one.cpp
dictionary/: a  match  match.cpp  match_problem_maker.cpp
dot/: compile.sh  sample.dot  testTex.dot  texdot.dot
eigen/: LU_cout_error.cpp  README  RungeKutta.cpp  a.out  hallo.cpp  hallo.cpp~  lu.cpp  memory.cpp
flexbison/: Makefile  input  main.c  syntax.y  test.l
ga_system/: Makefile  ga_sys.c  ga_sys.h  ga_usr.c  ga_usr.h  ga_usr_utils.c  ga_usr_utils.h  io.c  main.c
glpk-4.60/: Makefile  config.status  libtool
gnu_parallel/: .gitignore  run.sh  template.cpp
haskell/: Car.hs  NG_charName.hs  README  Shapes.hs  addVector.hs  applicative_io.hs  area.hs  declareNum.hs  declareNumCase.hs  doMonad.hs  doubleSmallNumber.hs  doubleUs.hs  fn.hs  (+7 more)
(+877 files in other folders)
